# modern_sumerian_ocaml

./: .gitignore  README.md  dune  dune-project  index.html  package.json  sumerian_conjugator_ocaml.opam
src/: Footer.module.scss  Header.module.scss  app.re  body.re  dune  footer.re  header.re
src/components/: Conjugator.module.scss  conjugator_ui.re  cuneiform_char.re  cuneiform_code_points.json  cuneiforms.re  custom_dict.re  dune  epsd_links.json  home.re  lessons.re  links.re  modal.re  modal_dialog.re  page_not_found.re  verb_error_form.re  web_utils.re
src/conjugator/: conjugator.ml  constructs.ml  dune  infixes.ml  utils.ml  verb_analysis.ml  verb_output.ml
src/styles/: Conjugator.module.scss  Home.module.scss  Lessons.module.scss  Links.module.scss  Modal.module.scss  css-tooltip.scss  index.scss  styles.scss
