; This dune file is for configuring the 'conjugator' library in your 
; Melange project.

; (name conjugator) - This line sets the name of the library to 
; 'conjugator'.It's the identifier used within your project to refer 
; to this library.

; (modes melange) - This specifies that the library is to be compiled using Melange.

(library
 (name conjugator)
 ; (modules conjugator constructs infixes utils verb_analysis verb_output)
 (modes melange))
